# aip-trainer

./: README.md  setup.cfg  setup.py  submit_aip_job.py  training_inputs.yaml
aip-trainer/: __init__.py  trainer.py
aip_trainer/: __init__.py  submit_aip_job.py  trainer.py  utils.py
dockerfiles/: Dockerfile-gpu  Dockerfile-simple
