[metadata]
name = aip-trainer
version = UNVERSIONED
description = Training and deploying a custom container to AIP
long_description = file: README.md
url = http://github.com/caledezma/aip-trainer
author = Carlos Ledezma
author_email = caledezma@gmail.com

[options]
packages = find:
include_package_data=True
install_requires =
    python-dotenv
    cloudml-hypertune
    google-auth
    google-cloud-secret-manager==2.8.0
    pandas
    scikit-learn
    tensorflow==2.7.0 # This TF version MUST match the nvidia/CUDA image in the Docker container
    wandb
